[package]
name = "iron-rest-stephane-homepage"
version = "0.1.0"
authors = ["Stéphane Bressani <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6.0"
urlencoded = "0.6.0"
