[package]
name = "iron-rest-stephane-homepage"
version = "0.1.0"
authors = ["Stéphane Bressani <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6.0"
params = "0.8.0"
# This is to remove after i've done my first rust library
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.102"
filter-city = "0.1.5"
